--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "composer/installers": "~1.0"
     },
 	"extra": {
-        "display-name": "[+] Disable all extensions",
+        "display-name": "[*] Disable all extensions",
         "soft-require": {
             "phpbb/phpbb": ">=3.2.0"
         },
