--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
 	"name": "david63/disableext",
 	"type": "phpbb-extension",
 	"description": "Adds an option to disable all phpBB extensions.",
-	"version": "2.1.1",
-	"time": "2019-05-11",
+	"version": "3.1.0-RC1",
+	"time": "2019-12-29",
 	"keywords": [
 		"phpbb",
 		"extension",
@@ -17,14 +17,14 @@
 		}
     ],
 	"require": {
-        "php": ">=5.4.0",
-		"phpbb/phpbb": ">=3.2.0",
+        "php": ">=7.1.0",
+		"phpbb/phpbb": ">=3.3.0",
         "composer/installers": "~1.0"
     },
 	"extra": {
-        "display-name": "[*] Disable all extensions",
+        "display-name": "[**] Disable all extensions",
         "soft-require": {
-            "phpbb/phpbb": ">=3.2.0"
+            "phpbb/phpbb": ">=3.3.0"
         },
         "version-check": {
             "host": "www.phpbb.com",
