--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
 	"name": "david63/disableext",
 	"type": "phpbb-extension",
 	"description": "Adds an option to disable all phpBB extensions.",
-	"version": "3.1.0-RC1",
-	"time": "2019-12-29",
+	"version": "3.1.0-RC2",
+	"time": "2021-01-14",
 	"keywords": [
 		"phpbb",
 		"extension",
@@ -18,13 +18,12 @@
     ],
 	"require": {
         "php": ">=7.1.0",
-		"phpbb/phpbb": ">=3.3.0",
         "composer/installers": "~1.0"
     },
 	"extra": {
-        "display-name": "Disable all extensions",
+        "display-name": "[d63] Disable all extensions",
         "soft-require": {
-            "phpbb/phpbb": ">=3.3.0"
+            "phpbb/phpbb": ">=3.3.0,<4.0.0@dev"
         },
         "version-check": {
             "host": "www.phpbb.com",
